[tool.poetry]
name = "aws-iam-policy-builder"
version = "0.1.0"
description = "Small utility to parse AWS IAM actions table and generate basic policies"
authors = ["Giuliani D. Sanches"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.11.1"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
